# hr-ai

./: .env.example  AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: chunks_db.py  config.py  db.py  embeddings.py  extract.py  main.py  pipeline.py  salary.py  storage.py
app/chunking/: __init__.py  chunker.py  extract_columns.py  normalize.py
app/providers/: base.py  claude.py
scripts/: inspect_doc.py  rechunk_survey.py  regress_chunks.py  sanity_test.py
