[project]
name = "hr-ai"
version = "0.1.0"
description = "HR platform document-extraction + RAG/reasoning service (FastAPI). Sprint 1: + /extract."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
    "pymupdf>=1.24",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
